# simple-soundboard

./: .gitmodules  CMakeLists.txt
src/audio/: audio.hpp  audio_manager.cpp  audio_manager.hpp
src/config/: config_manager.cpp  config_manager.hpp
src/core/: app.cpp  app.hpp  main.cpp
src/event/: event.hpp  event_dispatcher.cpp
src/input/: hotkey_manager.cpp  hotkey_manager.hpp  hotkey_translator.cpp  hotkey_translator.hpp  hotkeys.hpp  input.cpp  input.hpp  input_listener.cpp  input_listener.hpp
src/soundboard/: audio_table.cpp  audio_table.hpp  soundboard.cpp  soundboard.hpp
src/ui/: configuration_UI.cpp  configuration_UI.hpp  file_dialog.cpp  file_dialog.hpp  wheel_UI.cpp  wheel_UI.hpp
